add put and delete routes and swagger paths
