# controllers/artist.js
@@ -51,8 +51,46 @@ const postNewArtist = async (req, res) => {
   }
 };
 
+//UPDATE request
+const updateArtist = async (req, res) => {
+  const id = new ObjectId(req.params.id);
+  const artist = {
+    name: req.body.name,
+    age: req.body.age,
+    typeOfVoice: req.body.typeOfVoice,
+    band: req.body.band,
+    genre: req.body.genre,
+    death: req.body.death
+  };
+  const updateArtist = await db
+    .getDb()
+    .db('musicAPI')
+    .collection('artist')
+    .updateOne({ _id: id }, { $set: artist });
+
+  if (updateArtist.modifiedCount > 0) {
+    res.status(204).send(updateArtist);
+  } else {
+    res.status(500).send(updateArtist.error || 'Could not update artist or does not exist');
+  }
+};
+
+//DELETE request
+const deleteArtist = async (req, res) => {
+  const id = new ObjectId(req.params.id);
+  const deleteArtist = await db.getDb().db('musicAPI').collection('artist').deleteOne({ _id: id });
+
+  if (deleteArtist.deletedCount > 0) {
+    res.status(200).send(deleteArtist);
+  } else {
+    res.status(500).send(deleteArtist.error || 'Could not delete artist or does not exist');
+  }
+};
+
 module.exports = {
   getAllArtists,
   getSingleArtist,
-  postNewArtist
+  postNewArtist,
+  updateArtist,
+  deleteArtist
 };
